syntax = "proto3";

package proto;

message Request {
    int64 a = 1;
    int64 b = 2;
}

message Response {
    int64 result = 1;
}

message DisplayRequest {
}

message DisplayResponse {
    string sp = 1;
}

message UploadRequest {
    string upload = 1;
}

message UploadResponse {
}

service AddService {
    rpc DisplayAscii(DisplayRequest) returns (DisplayResponse);
    rpc UploadAscii(UploadRequest) returns (UploadResponse);
}